9177 - ensure people info wraps in "List of Posts" (using CSS float attribute)
 #9177

--- a/openscholar/modules/os_features/os_profiles/os_profiles.css
+++ b/openscholar/modules/os_features/os_profiles/os_profiles.css
@@ -8,6 +8,9 @@
     float: left;
     margin-right: 1em;
 }
+.node-person .field-name-field-address .field-item {
+    float: left;
+}
 #content .node-person .os-slider .field-name-field-email,
 #content .node-person .field-name-field-phone,
 #content .node-person .field-name-field-office-hours,
